tests/mir-test/test_out/partial-moves-parse-out.txt
error: expected '\n' | ';' but got 'fn'
 --> partial-moves\root.ctl:1:662
  |
1 | struct A ; struct B { a0 : A ; a1 : A ; } ; impl B { fn new() -> Self =>\{ a0 :\{} ; a1 :\{} } ; } ; fn [T] drop(t : T) {} ; fn double_move() { let b = B\new() ; drop(b.a0) ; drop(b.a1) ; drop(b.a0) ; } ; fn move_of_partially_moved() { let b = B\new() ; drop(b.a0) ; drop(b) ; } ; fn partial_move_and_assign() { let b = B\new() ; drop(b.a0) ; b.a0 = A\{} ; drop(b) ; } ; fn conditional_partial_move() { let b = B\new() ; if 0 == 0 => drop(b.a0) ; drop(b) ; } ; fn conditional_assign() {     let b = B\new() ; drop(b.a0) ; if 0 == 0 => b.a0 = A\{} ; else =>     return ; drop(b) ; } ; fn reference_partial_move() { let b = B\new() ; drop(b.a0) ; let a = ^ b ; } fn partial_reference_move() { let b = B\new() ; drop(b) ; let a = ^ b.a0 ; }
  |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      ^^ token located here
  |
  = info: list

